--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+    background-image: url('/back.jpg');
     font-family: 'Courier New', Courier, monospace;
     padding: 20px;
   }
@@ -39,8 +39,8 @@ body {
   
   hr {
     height: 2px;
-    background-color: brown;
-    border-color: brown;
+    background-color: rgb(165, 126, 42);
+    border-color:  rgb(165, 126, 42);
   }
   
   .bottom-line {
@@ -74,22 +74,7 @@ body {
     font-size: 14px;
   }
   
-  .address {
+  footer p{
     margin-bottom: 5px;
   }
   
-  a {
-    color: black;
-  }
-  
-  a:visited {
-    color: black;
-  }
-  
-  a:hover {
-    color: brown;
-  }
-  
-  a:active {
-    color: brown;
-  }
